--- a/styles/qubey.css
+++ b/styles/qubey.css
@@ -101,4 +101,8 @@ body {
     text-align: center;
     margin: .15em;
     padding: 10px;
+    position: relative;
+    top: 10rem;
+    font-weight: 600;
+    font-size:2.5em;
 }
