--- a/styles/qubey.css
+++ b/styles/qubey.css
@@ -77,7 +77,7 @@
     height:auto;
     max-width: 50%;
     max-height: 50%;
-    overflow: hidden;
+    overflow: visible;
     padding: 10px;
 }
 
@@ -105,4 +105,17 @@ body {
     top: 10rem;
     font-weight: 600;
     font-size:2.5em;
+}
+
+/*Possibly might look better as an article? Perhaps?*/
+article {
+    font-family:sans-serif;
+    display:inline;
+    border: .15em dotted #293028;
+    padding: .55%;
+    margin: .45em;
+    float: right;
+    vertical-align: middle;
+    font-weight: bold;
+    background-color: #955600;
 }
